# python-nlihrc

./: .bumpversion.cfg  .gitignore  .gitlab-ci.yml  Dockerfile_alpine  Dockerfile_debian  README.rst  config.toml  pyproject.toml  tox.ini
src/nlihrc/: __init__.py  cliport_client.py  console.py  main.py  misc.py  robot.py  speech.py  text.py  udpclient.py
src/rospkg/: .rosinstall
src/rospkg/.catkin_tools/profiles/default/: devel_collisions.txt
src/rospkg/src/nlihrc/: CMakeLists.txt  nlihrc_plugin.xml  package.xml
src/rospkg/src/nlihrc/config/: cartesian_controller.yaml
src/rospkg/src/nlihrc/include/nlihrc/: cartesian_controller.h
src/rospkg/src/nlihrc/launch/: cartesian_controller.launch  demo.launch  main.launch  move_group.launch  move_to_start.launch  panda_camera_handeye_calibration.launch  robot_rviz.launch  ros_controllers.launch
src/rospkg/src/nlihrc/src/: cartesian_controller.cpp
tests/: test_console.py  test_nlihrc.py
