[tool.poetry]
name = "nlihrc"
version = "0.1.0"
description = "Natural Language Instructions for Human Robot Collaboration"
authors = ["Omar Hassan <omar.hassan@tuni.fi>"]
# FIXME: Doublecheck these values
#homepage = "https://gitlab.com/advian-oss/python-nlihrc/"
#repository = "https://gitlab.com/advian-oss/python-nlihrc/"
#license = "FIXME"
readme = "README.rst"

[tool.poetry.scripts]
nlihrc = "nlihrc.console:nlihrc_cli"


[tool.black]
line-length = 120
target-version = ['py38']
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
  |  __pycache__
)
'''

[tool.pytest.ini_options]
junit_family="xunit2"
addopts="--cov=nlihrc --cov-fail-under=65 --cov-branch"
asyncio_mode="strict"

[tool.pylint.format]
max-line-length = 120

[tool.pylint.design]
max-parents = 10

[tool.pylint.messages_control]
disable=["fixme", "W1202", "C0330", "C0209"]

[tool.pylint.similarities]
min-similarity-lines = 8
ignore-imports = true

[tool.coverage.run]
omit = ["tests/*"]
branch = true

[tool.poetry.dependencies]
python = "^3.8"
libadvian = "^1.0"
click = "^8.0"
rospkg = "^1.4.0"
vosk = "^0.3.45"
transforms3d = "^0.4.1"
onnxruntime = "^1.13.1"
numpy = "^1.24.2"
toml = "^0.10.2"
word2number = "^1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.1"
coverage = "^6.3"
pytest-cov = "^3.0"
pylint = "^2.13"
black = "^22.3"
bandit = "^1.7"
mypy = "^0.942"
pre-commit = "^2.17"
pytest-asyncio = "^0.18"
bump2version = "^1.0"
detect-secrets = "^1.2"

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
