<?xml version="1.0"?>
<package format="2">
  <name>nlihrc</name>
  <version>0.10.1</version>
  <description>nlihrc provides franka cartesian controller for servoing and launch files</description>
  <maintainer email="omar.hassan@tuni.fi">Omar Hassan</maintainer>
  <license>MIT</license>
  <url type="repository">https://github.com/spomha/python-nlihrc</url>
  <author>Omar Hassan</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>message_runtime</build_export_depend>

  <depend>controller_interface</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>eigen_conversions</depend>
  <depend>franka_hw</depend>
  <depend>franka_gripper</depend>
  <depend>geometry_msgs</depend>
  <depend>hardware_interface</depend>
  <depend>joint_limits_interface</depend>
  <depend>tf</depend>
  <depend>tf_conversions</depend>
  <depend>libfranka</depend>
  <depend>pluginlib</depend>
  <depend>realtime_tools</depend>
  <depend>roscpp</depend>
  <depend>urdf</depend>
  <depend>visualization_msgs</depend>

  <exec_depend>franka_control</exec_depend>
  <exec_depend>franka_description</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- Moveit dependenciess -->
  <depend>moveit_ros_move_group</depend>
  <depend>moveit_fake_controller_manager</depend>
  <depend>moveit_kinematics</depend>
  <depend>moveit_planners_ompl</depend>
  <depend>moveit_ros_visualization</depend>
  <depend>moveit_setup_assistant</depend>
  <depend>moveit_simple_controller_manager</depend>
  <depend>joint_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>tf2_ros</depend>
  <depend>xacro</depend>


  <export>
    <controller_interface plugin="${prefix}/nlihrc_plugin.xml" />
  </export>
</package>
